--- a/css/styles.css
+++ b/css/styles.css
@@ -246,8 +246,20 @@ width, etc. */
 /* --- */
 /* Replace this comment with your media query. */
 /* --- */
-
+@media (min-width: 900px) {
+  .product-card {
+    height: 500px;
+  }
+}
 /* Media Query Desktop */
 /* --- */
 /* Replace this comment with your media query. */
 /* --- */
+@media (min-width: 1200px) {
+  .product-card {
+    height: 600px;
+  }
+  .intro-text {
+    order: -1;
+  }
+}
